fix(date-picker): adding classes to allow date-picker calendar to adjust for modal scrolling and partial cut off like dropdowns - CIR-328

--- a/core/scss/components/date-picker.scss
+++ b/core/scss/components/date-picker.scss
@@ -22,6 +22,18 @@
       top: 4px;
     }
 
+    &__dropdown {
+      .cui-event-overlay,
+      .cui-event-overlay__children {
+        position: absolute;
+      }
+
+      .cui-event-overlay--top {
+        top: auto;
+        bottom: 2.125rem;
+      }
+    }
+
     &__header {
       padding-top: $datepicker-header__padding-top;
     }
